# ainstruct-mcp

./: .dockerignore  .env.example  .gitignore  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile.mcp-client  Dockerfile.test  Dockerfile.test-base  PRODUCTION.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml  pr-checks.yml  release.yml  test.yml
docker/: entrypoint.sh
docs/: TESTING.md  WEBUI.md  WEBUI_TESTING.md  WORKFLOWS.md
docs/impl/: AUTHENTICATION.md  BREAKING_CHANGES.md  DATABASE_MIGRATION.md  IMPLEMENTATION_PLAN.md  MCP_API.md  REST_API.md  USER_PERMISSIONS.md  WORKFLOWS.md
docs/plans/: add-collection-name-to-documents-table.md  delete-button-fix-plan.md  documentation-update-plan.md  promote_user_endpoint.md  promote_user_endpoint_fix.md  qdrant-collection-deletion-plan.md  register-page-layout-fix.md  release-workflow-multi-service-version-update.md  remove-mcp-tools-plan.md  search_users_rest_endpoint.md  testing-documentation-update-plan.md  user-request-counters-plan.md  user-stats-dialog-usage-plan.md  uv-workspace-migration-plan.md  web-ui-reorganization-plan.md
docs/rest/: promote-user.md
docs/sqlite_to_postgresql/: MIGRATION_PLAN.md  TASKS.md
migrations/: env.py
migrations/versions/: 001_rename_api_keys_to_cats.py  339e4a4a595a_add_users_table_and_extend_api_keys.py  add_collections_refactor.py  add_usage_records.py  e0bfb8ff04f0_initial_postgres_migration.py  fix_missing_columns.py  fix_qdrant_point_ids_array.py  remove_token_is_active.py
plans/: dependency-upgrade-latest.md
scripts/: test.sh  update_version.py
services/mcp-server/: pyproject.toml
services/mcp-server/src/mcp_server/: __init__.py  server.py
services/mcp-server/src/mcp_server/tools/: admin_tools.py  auth.py  cat_tools.py  collection_tools.py  context.py  document_tools.py  pat_tools.py  user_tools.py
services/rest-api/: pyproject.toml
services/rest-api/src/rest_api/: __init__.py  app.py  deps.py  schemas.py
services/rest-api/src/rest_api/middleware/: usage.py
services/rest-api/src/rest_api/routes/: admin.py  auth.py  cat.py  collections.py  documents.py  pat.py
services/web-ui/: pyproject.toml
services/web-ui/src/web_ui/: __init__.py  api_client.py  app.py  auth.py  utils.py
services/web-ui/src/web_ui/components/: __init__.py  common.py  layout.py  navbar.py
services/web-ui/src/web_ui/pages/: __init__.py  admin.py  auth.py  collections.py  dashboard.py  documents.py  editor.py  tokens.py  viewer.py
services/web-ui/src/web_ui/static/js/: token_refresh.js
src/: __init__.py
src/app/: __init__.py  main.py
src/app/config/: __init__.py
src/app/db/: __init__.py  models.py  qdrant.py  repository.py
src/app/mcp/: server.py
src/app/rest/: app.py  deps.py  run.py  schemas.py
src/app/rest/routes/: __init__.py  admin.py  auth.py  cat.py  collections.py  documents.py  pat.py
src/app/services/: __init__.py  auth_service.py  chunking.py  embedding.py
src/app/tools/: admin_tools.py  auth.py  cat_tools.py  collection_tools.py  context.py  document_tools.py  key_tools.py  pat_tools.py  user_tools.py
tests/: conftest.py  debug_connection.py  mcp_live_test.py  test_api_keys.py  test_auth.py  test_collections.py  test_integration.py  test_pat_tokens.py  test_update_document.py
tests/e2e/: mcp_client_test.py  mcp_live_test.py  test_admin.py  test_api_keys.py  test_auth.py  test_authenticated_jwt.py  test_authenticated_pat.py  test_collections.py  test_cross_user_isolation.py  test_documents.py  test_pat_tokens.py  test_permissions.py  test_tool_listing.py  test_unauthorized_user.py
tests/e2e/rest/: test_rest_api_e2e.py
tests/integration/: test_migrations.py  test_user_deletion.py
tests/integration/database/: test_migrations.py
tests/integration/mcp/: test_store_document_integration.py
tests/integration/rest/: test_rest_api.py
tests/results/: test_results_2026-02-23.md
tests/unit/: test_auth.py  test_document_tools.py  test_tool_filtering.py
tests/unit/admin/: test_admin_tools.py  test_routes.py
tests/unit/auth/: test_token_security.py  test_tool_filtering.py  test_unauthorized_user.py
tests/unit/collections/: test_collection_tools.py  test_collection_validation.py
tests/unit/context/: test_context_concurrency.py
tests/unit/documents/: test_document_error_handling.py  test_document_tools.py  test_pat_document_access.py  test_update_document.py
tests/unit/keys/: test_cats.py
tests/unit/mcp/: test_auth_middleware.py  test_cat_create.py  test_cat_revoke.py  test_cat_rotate.py  test_collection_create.py  test_collection_delete.py  test_collection_get.py  test_collection_rename.py  test_collection_tools.py  test_context.py  test_document_delete.py  test_document_get.py  test_document_list.py  test_document_move.py  test_document_store.py  test_document_tools.py  test_document_update.py  test_server.py  test_usage_tracking.py
tests/unit/pat_tokens/: test_pat_tokens.py
tests/unit/rest/: test_admin_routes.py  test_app.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_cat_create.py  test_cat_delete.py  test_cat_list.py  test_cat_revoke.py  test_cat_rotate.py  test_collections_create.py  test_collections_delete.py  test_collections_get.py  test_collections_rename.py  test_documents_delete.py  test_documents_get.py  test_documents_list.py  test_documents_search.py  test_documents_store.py  test_documents_update.py  test_pat_create.py  test_pat_delete.py  test_pat_list.py  test_pat_revoke.py  test_pat_rotate.py  test_usage_middleware.py
tests/unit/rest/shared/: test_schemas.py
tests/unit/shared/: test_auth_context.py  test_auth_service.py  test_chunking.py  test_config.py  test_constants.py  test_usage_repository.py
tests/unit/workflows/: test_complete.py
