[project]
name = "ainstruct-mcp"
version = "3.4.0"
description = "AI Document Memory MCP Server - Store and search markdown documents with semantic search"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "qdrant-client>=1.17.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.12.0",
    "SQLAlchemy>=2.0.46",
    "alembic>=1.18.0",
    "PyYAML>=6.0.0",
    "bcrypt>=4.2.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[tool.semantic-release]
version_variables = ["src/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = false
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "fastmcp.server.*",
    "qdrant_client.*",
    "tiktoken",
    "httpx",
    "pydantic_settings",
    "pydantic",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]
