[project]
name = "ainstruct-mcp-workspace"
version = "3.10.0"
description = "Monorepo for ainstruct services - MCP server and REST API"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
ainstruct-shared = { workspace = true }
ainstruct-mcp-server = { workspace = true }
ainstruct-rest-api = { workspace = true }
ainstruct-web-ui = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = false
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
mypy_path = "packages/shared/src:services/mcp-server/src:services/rest-api/src:services/web-ui/src"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "qdrant_client.*",
    "tiktoken",
    "httpx",
    "pydantic_settings",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]
