[project]
name = "ainstruct-mcp-server"
version = "3.5.0"
description = "MCP Server for AI Document Memory"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "ainstruct-shared",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
