[project]
name = "ainstruct-rest-api"
version = "3.5.0"
description = "REST API for AI Document Memory"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "ainstruct-shared",
]

[project.scripts]
rest-api = "rest_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rest_api"]
