[project]
name = "ainstruct-web-ui"
version = "3.5.0"
description = "User Dashboard WebUI for AI Document Memory"
requires-python = ">=3.14"
dependencies = [
    "nicegui>=2.0.0",
    "httpx>=0.28.0",
    "ainstruct-shared",
]

[project.scripts]
web-ui = "web_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_ui"]
